--- a/class05/class05.qmd
+++ b/class05/class05.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 05: Data Visualization with GGPLOT"
 author: "Chloe Wong (PID: A16893383)"
-format: pdf
+format: gfm
 ---
 
 ## Plotting in R
