--- a/class 08/class08.qmd
+++ b/class 08/class08.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 8: PCA Mini Project"
 author: "Chloe Wong (PID: A16893383)"
-format: pdf
+format: gfm
 ---
 
 It is important to consider scaling your data before analysis such as PCA. 
